tests/cases/positive/typing/simple/lambdaTypeToType.lam
test : Type 0 -> Type 0
test = \x -> x
