tests/cases/negative/typing/grading/zeroUseVarUsed.lam
-- we specify zero uses, but we use the variable
test : (l : (.0, .0) Unit) -> Unit
test = \l -> l
